Fixes work heading overlap on landing section

--- a/src/scss/sections/sections/_landing.scss
+++ b/src/scss/sections/sections/_landing.scss
@@ -3,7 +3,7 @@
 #landing {
     display: flex;
     gap: 1rem;
-    padding: 0 $padding-sm;
+    padding: 0 $padding-sm $padding-lg;
 
     .landing-info {
         align-self: center;
